Closed
Bug 815047
Opened 13 years ago
Closed 13 years ago
Qt Geolocation does not compile on mer sdk QtMobility namespace missing
Categories
(Core :: DOM: Geolocation, defect)
Tracking
()
RESOLVED
FIXED
mozilla20
People
(Reporter: romaxa, Assigned: romaxa)
References
Details
Attachments
(2 files)
|
876 bytes,
patch
|
romaxa
:
review+
|
Details | Diff | Splinter Review |
|
2.25 KB,
patch
|
romaxa
:
review+
|
Details | Diff | Splinter Review |
In file included from dom/src/geolocation/nsGeolocation.cpp:54:0:
dom/system/unix/QTMLocationProvider.h:27:32: error: 'QGeoPositionInfo' does not name a type
dom/system/unix/QTMLocationProvider.h:27:48: error: ISO C++ forbids declaration of 'parameter' with no type [-fpermissive]
| Assignee | ||
Comment 1•13 years ago
|
||
| Assignee | ||
Comment 2•13 years ago
|
||
| Assignee | ||
Comment 3•13 years ago
|
||
Attachment #685051 -
Flags: review+
| Assignee | ||
Comment 4•13 years ago
|
||
Comment 5•13 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/df4f90bb8aac
https://hg.mozilla.org/mozilla-central/rev/541ccce39563
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla20
You need to log in
before you can comment on or make changes to this bug.
Description
•