Bug 815047 - Qt Orientation does not compile on mer sdk QtMobility namespace missing. r=romaxa NPODB DONTBUILD